# sys-file-manager-path

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: CI.yml  issue-lock.yml  issue-stale.yml
crates/binding/: Cargo.toml
crates/binding/src/: explore.rs  lib.rs  log.rs  system_info.rs
crates/explore/: Cargo.toml
crates/explore/src/: main.rs
crates/explore/src/windows/: explore.rs  index.rs  utils.rs
crates/sys-file-manager-path/: Cargo.toml  README.md
crates/sys-file-manager-path/src/: main.rs
crates/sys-file-manager-path/src/export/: dir.rs
crates/sys-file-manager-path/src/windows/: explore.rs  index.rs  utils.rs
docs/: create-publish.md
