[workspace]

resolver = "2"
# 设置默认执行的 workspace
default-members = ["crates/sys-file-manager-path"]
members = [
    "crates/*",
    # "crates/xxx",
]
exclude = []

[workspace.package]
version = "0.1.1"
authors = ["miniocean404@qq.com"]
edition = "2024"
description = "获取 Mac Finder、Windows Explore 窗口的路径"
license = "MIT"
repository = "https://github.com/miniocean404-rust/sys-explore"

# [[bin]]
# name = "core"
# path = "core/src/main.rs"

[profile.dev]
opt-level = 0
# 将每个 crate 分成称为代码生成单元 (codegen units) 的块进行编译, 也可以写为 rustflags = ["-C", "codegen-units=16"]
# 等于你就在告诉 Rust 将编译任务拆分成 16 个并行线程
codegen-units = 16 # debug build will cause runtime panic if codegen-unints is default
debug = true
# 增量构建
incremental = true

# https://doc.rust-lang.org/cargo/reference/profiles.html
# 优化方法：https://github.com/johnthagen/min-sized-rust
[profile.release]
debug = false
# 控制 LLVM 链接时间优化,可以使用整个程序分析来生成更好的优化代码，但代价是链接时间更长，例如，这可以删除死代码
lto = true
# 控制一个包将被分割成多少个"代码生成单元"。更多的代码生成单元允许并行处理更多的包，可能会减少编译时间，但可能会产生较慢的代码
codegen-units = 1
# 决定 Rust 对程序使用哪种程度的优化，0-3 范围
opt-level = 3
# 在 Linux 和 macOS 上，符号信息默认包含在编译.elf文件中。此信息对于正确执行二进制文件不是必需的。手动删除：strip target/release/min-sized-rust
# 自动从二进制文件中去除符号（调试信息）优化打包大小
strip = true
# 默认情况下，当 Rust 代码遇到必须调用的情况时panic!()，它会展开堆栈并生成有用的回溯。但是，展开代码确实需要额外的二进制大小。rustc可以指示立即中止而不是展开，这样就不需要额外的展开代码了。
panic = "abort"
# 是否开启断言调试
debug-assertions = false

[workspace.dependencies]
# 内部 crate
binding = { path = "./crates/binding", version = "0.1.0" }
sys-file-manager-path = { path = "./crates/sys-file-manager-path", version = "0.1.0" }

# 异步运行时
tokio = { version = "1.49.0", features = ["full"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# 时间处理
chrono = "0.4.42"

# 错误处理
anyhow = "1.0.100"
thiserror = "2.0.18"

# 文件类型推断
infer = "0.19.0"

# 文件系统
globset = "0.4.18"
walkdir = "2.5.0"

# 系统信息
num_cpus = "1.17.0"

# URL 编码
urlencoding = "2.1.3"

# Cargo 元数据
cargo_metadata = "0.23.1"

# 枚举工具
strum = "0.27.2"
strum_macros = "0.27.2"

# 日志及栈追踪
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-futures = "0.2.5"
tracing-serde = "0.2.0"
tracing-chrome = "0.7.2" # 未知作用

# 堆栈跟踪
backtrace = "0.3.76"

# 线程安全的单例模式
once_cell = "1.21.3"

# macOS
cocoa = "0.26.1"
objc = "0.2.7"
objc2 = "0.6.3"

# Windows
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Foundation",
] }
# windows-sys = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging"] }

# N-API 相关
napi = { version = "3.8.2", features = [
    "napi9",
    "async",
    "serde-json",
    "chrono_date"
] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs.git", features = ["type-def"], branch = "main" }
napi-build = "2.3.1"
