[package]
name = "explore"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
urlencoding.workspace = true
strum.workspace = true
strum_macros.workspace = true


[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true
objc2.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
